src/objects/ProfileAppSettingMember__c.object
<CustomObject>
    <fields>
        <fullName>AppSetting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AppSetting</label>
        <referenceTo>AppSettings__c</referenceTo>
        <relationshipLabel>ProfileAppSettingMembers</relationshipLabel>
        <relationshipName>ProfileAppSettingMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HashKey__c</fullName>
        <label>HashKey</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile__c</fullName>
        <label>Profile</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>ProfileAppSettingMember</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ProfileAppSettingMember Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ProfileAppSettingMembers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>